# xburst-tools

./: .gitignore  .mailmap  INSTALL  Makefile  Makefile.am  README  README.kernel  configure.ac
debian/: .gitignore  README.source  autogen.sh  changelog  changelog.upstream.awk  control  copyright  docs  get-orig-source.sh  rules  xburst-tools.manpages
debian/source/: include-binaries
flash-tool/: Makefile  README  cmd.c  cmd.h  cmd_boot.c  command_line.c  command_line.h  config.h  configure.ac  ingenic_cfg.c  ingenic_cfg.h  ingenic_usb.c  ingenic_usb.h  main.c  main.h  reflash.sh  usb.c  usb.h  usb_boot.cfg  usb_boot_defines.h
flash-tool/debian/: README.Debian  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.xml.ex  postinst.ex  preinst.ex  prerm.ex  rules  watch.ex
flash-tool/device_stage1/: Makefile  board_4740.c  configs.h  debug.c  jz4740.h  jz4750.h  main.c
flash-tool/device_stage2/: Makefile
flash-tool/device_stage2/include/: hand.h  jz4750.h  nandflash.h  usb_boot.h
flash-tool/device_stage2/nandflash/: nandflash_4740.c  nandflash_4750.c
flash-tool/device_stage2/usb_boot/: boothandler.c  cache.c  main.c  serial.c
flash-tool/src/: Makefile.am  cmd.h  command_line.c  ingenic_cfg.c  ingenic_cfg.h  main.c
flash-tool/xburst_stage1/: head.S
flash-tool/xburst_stage2/: Makefile
flash-tool/xburst_stage2/include/: jz4740.h
inflash/: ChangeLog  README  configure.ac
inflash/debian/: changelog  control  cron.d.ex  dirs  inflash.default.ex  inflash.doc-base.EX  init.d.lsb.ex  manpage.sgml.ex  menu.ex  postrm.ex
inflash/src/: Makefile.am  cmd.c  cmd.h  command_line.c  inflash.cfg  ingenic_cfg.c  ingenic_cfg.h  ingenic_usb.c  ingenic_usb.h  main.c  usb_boot_defines.h
inflash/xburst_include/: jz4740.h  jz4750.h  nandflash.h  typedefs.h  xburst_types.h
inflash/xburst_stage1/: .gitignore  Makefile  main.c
inflash/xburst_stage2/: Makefile  boothandler.c  main.c  nandflash_4740.c
inflash/xburst_stage2/include/: usb.h
inflash/xburst_stage2/usb_boot/: udc.c
ingenic-tools/drivers/: ingenic.c
kernel/: Changelog-linux-2.6.24.3.txt
nandboot/: README  config.h
nandboot/include/: jz4730.h  jz4730_board.h  jz4740.h  jz4740_board.h  nand.h  types.h
nandboot/src/: Makefile  cpu.c  head.S  jz4730.c  jz4730_board.c  jz4730_nand.c  jz4740.c  jz4740_board.c  jz4740_nand.c  jz_serial.c  ld.script  nand_boot.c
nandprog/: Makefile  README
nandprog/common/: cmdline.c  loadcfg.c  main.c
nandprog/include/: configs.h  include.h  jz4730.h  jz4740.h  nand_ecc.h
nandprog/jz4730/: nandflash_4730.c
nandprog/jz4740/: nandflash_4740.c
openwrt/: Makefile
qiboot/: Makefile
toolchain/patches/glibc/: SUPPORTED  glibc-2.6.1-for_gcc-4.3.patch  glibc-2.6.1-hppa_nptl-1.patch  glibc-2.6.1-sysdep_cancel-1.patch
u-boot/: Changelog-u-boot-1.1.6.txt  README
u-boot/patchs/: 0004-change-CPU-speed.patch  0005-we-don-t-find-the-RXD-on-the-Pi-s-PCB.-so-I-make-the.patch  u-boot-1.1.6-jz-20090306.patch
usb-boot/stage1/: Makefile  board_4740.c  configs.h  jz4740.h  main.c
usb-boot/stage2/: Makefile
usb-boot/stage2/include/: hand.h  jz4740.h  nandflash.h
usb-boot/stage2/nandflash/: nandflash_4740.c  nandflash_4750.c
usb-boot/stage2/usb_boot/: boothandler.c  main.c
usbboot/: .gitignore  README  README.usbboot  configure.ac  usbboot.1
usbboot/debian/: .gitignore  README.source  autogen.sh  changelog  clean.sh  control  copyright  dirs  rules  watch  xburst-tools.manpages
usbboot/debian/source/: include-binaries
usbboot/doc/: usbboot.1  usbboot.cfg  usbboot_2gb_nand.cfg
usbboot/src/: .gitignore  Makefile.am  cmd.c  cmd.h  command_line.c  command_line.h  ingenic_cfg.c  ingenic_cfg.h  ingenic_usb.c  ingenic_usb.h  main.c  usb_boot_defines.h  usbboot.cfg
usbboot/stage1/: Makefile  board_4750.c  common.c  debug.c  main.c
usbboot/stage2/: Makefile
usbboot/stage2/include/: jz4750.h
usbboot/stage2/usb_boot/: udc.c
usbboot/xburst_include/: configs.h  error.h  jz4740.h  jz4750.h  nandflash.h  udc.h  usb.h  usb_boot.h  xburst_types.h
usbboot/xburst_stage1/: Makefile  board_4740.c  board_4750.c  common.c  debug.c  head.S  main.c
usbboot/xburst_stage2/: .gitignore  Makefile  boothandler.c  head.S  main.c  nandflash_4740.c  nandflash_4750.c  serial.c  udc.c
xbboot/: .gitignore  ChangeLog  Makefile.am  README  README.xbboot  configure.ac
xbboot/doc/: xbboot.1
xbboot/host-app/: .gitignore  Makefile.am  host_main.c
xbboot/scripts/: boot-echo.sh  boot-uboot.sh  boot-zImage.sh
xbboot/target-common/: common-types.h  common.h  jz4740.h  jz4760.h  serial.c  serial.h
xbboot/target-echokernel/: .gitignore  Makefile  echo-kernel.c  head.S  target.ld
xbboot/target-stage1/: .gitignore  Makefile  board-jz4740.c  board-jz4740.h  board-jz4760.c  board-jz4760.h  head.S  stage1.c
xburst-tools/: ChangeLog  README  autogen.sh  configure.ac
xburst-tools/debian/: control  dirs  rules
xburst-tools/src/: Makefile.am  cmd.c  cmd.h  command_line.c  ingenic_cfg.h  ingenic_usb.c  ingenic_usb.h  main.c  xburst_tools.cfg
xburst-tools/xburst_include/: error.h  jz4740.h  jz4750.h
xburst-tools/xburst_stage1/: board_4750.c  common.c  debug.c
xburst-tools/xburst_stage2/: boothandler.c  nandflash_4750.c  udc.c
